# frustrated

./: .env.example  .gitignore  DESIGN.md  Dockerfile  PRODUCT.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  skills-lock.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: AuthPanel.tsx  ComposerPanel.tsx  FeedHeader.tsx  FrustrationFeed.tsx  MetricsStrip.tsx  TokenPanel.tsx  TopBar.tsx  ui.tsx
frontend/src/lib/: constants.ts  format.ts
migrations/: env.py
migrations/versions/: 0001_initial.py
src/frustratedai/: __init__.py  app.py  cli.py
src/frustratedai/api/: __init__.py  auth.py  dependencies.py  routes.py  static.py
src/frustratedai/core/: config.py  security.py
src/frustratedai/db/: models.py  session.py
src/frustratedai/repositories/: __init__.py  frustrations.py  users.py
src/frustratedai/schemas/: __init__.py  dto.py
src/frustratedai/services/: __init__.py  auth.py  frustrations.py  mappers.py
tests/: test_app.py
