[project]
name = "frustratedai"
version = "0.1.0"
description = "A compact Quater demo app where humans and AI agents share public frustration logs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "FrustratedAI Contributors" },
]
keywords = ["quater", "mcp", "cli", "llm", "demo", "react"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
  "aiosqlite>=0.22.1",
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "msgspec>=0.19.0",
  "python-dotenv>=1.2.2",
  "quater>=0.1.0a1",
  "sqlalchemy[asyncio]>=2.0",
]

[project.urls]
Homepage = "https://github.com/frustratedai/frustratedai"
Repository = "https://github.com/frustratedai/frustratedai"

[project.scripts]
frustratedai = "frustratedai.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/frustratedai"]

[tool.hatch.build.targets.wheel.force-include]
"src/frustratedai/web" = "frustratedai/web"

[tool.hatch.build.targets.sdist.force-include]
"src/frustratedai/web" = "src/frustratedai/web"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
