[project]
name = "frustratedai"
version = "0.1.0"
description = "A compact Quater backend for public human and AI frustration logs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "FrustratedAI Contributors" },
]
keywords = ["quater", "mcp", "cli", "llm", "demo"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
  "aiosqlite>=0.22.1",
  "alembic>=1.18.4",
  "asyncpg>=0.31.0",
  "msgspec>=0.19.0",
  "python-dotenv>=1.2.2",
  "quater>=0.1.0a1",
  "sqlalchemy[asyncio]>=2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
